# MIB-MockInterviewAIBot

./: .env.example  .env.local  .gitignore  251108-reference-answer-removal-test-report.md  251108-status-value-error-investigation-report.md  251108-test-rerun-after-fixes-report.md  CHANGELOG_ENV.md  CLAUDE.md  CODE_REVIEW_QA_CONSTRAINTS_251115.md  DATABASE_SETUP.md  ENV_SETUP.md  IMPLEMENTATION_REPORT_251114.md  IMPLEMENTATION_REPORT_251115_DETAILED_FEEDBACK.md  PROJECT_STATUS_SUMMARY.md  QUICK_REFERENCE.md  README.md  RESEARCH_COMPLETION_REPORT.md  RESEARCH_SUMMARY.md  SETUP.md  alembic.ini  pyproject.toml  pytest.ini  quickstart.bat  repomix-output.xml  test_basic.py  test_question_constraints.py
.claude/: settings.local.json  statusline.sh
alembic/: env.py
alembic/versions/: 0001_create_tables.py  0001_initial_database_schema_with_all_tables.py  0002_insert_seed_data.py  0002_seed_sample_data.py  0003_add_planning_and_adaptive_fields.py  0003_create_evaluations_tables.py  0004_clear_data_and_seed_candidates_vi.py  0004_seed_data_for_planning_and_adaptive.py  0005_drop_reference_answer_column.py  0005_seed_questions_vi.py  0006_seed_additional_candidates.py  0006_seed_cv_analyses_vi.py  0007_seed_additional_questions.py  0007_seed_interviews_vi.py  0008_seed_answers_vi.py  0008_seed_cv_analyses.py  0009_seed_followup_questions_vi.py  0009_seed_interviews.py  0010_seed_answers.py  0011_seed_followup_questions.py  251106_2300_add_planning_and_adaptive_fields.py  251108_1200_drop_reference_answer_column.py  525593eca676_seed_sample_data.py  a4047ce5a909_initial_database_schema_with_all_tables.py  d0078872a49a_seed_data_for_planning_and_adaptive_.py
docs/: README-FEEDBACK-RESEARCH.md  ai-capabilities-presentation.md  api.md  architecture.md  code-standards.md  codebase-summary.md  dto-design-patterns.md  feedback-patterns-quick-reference.md  feedback-system-architecture.md  interview-feedback-research.md  interview-state-management.md  project-overview-pdr.md  project-roadmap.md  spec.md  system-architecture.md
docs/brainstorming/: 251115-detailed-interview-feedback-summary.md
plans/: 251102-interview-api-websocket-implementation-plan.md
plans/251106-2142-adaptive-interview-planning/: IMPLEMENTATION_COMPLETE.md  phase-01-domain-model-updates.md  phase-02-database-migration.md  phase-03-planning-use-case.md  phase-04-adaptive-evaluation.md  phase-05-api-integration.md  phase-06-testing-validation.md  plan.md
plans/251107-2339-adapter-mocking/: PHASE1-PHASE2-COMPLETE.md  SUMMARY.md  phase-1-cv-analytics-mocks.md  phase-2-di-integration.md  phase-3-test-infrastructure.md  phase-4-documentation.md  plan.md
plans/251110-documentation-updates/: 251110-documentation-update-report.md
plans/251111-1458-refactor-plan-interview-flow/: phase-01-analysis-design.md  phase-02-llm-port-enhancement.md  phase-03-vector-search-integration.md  phase-04-unified-api-endpoint.md  phase-05-testing-documentation.md  plan.md
plans/251112-0022-realtime-interview-enhancement/: README.md  phase1-speech-integration.md  phase2-websocket-protocol.md  phase3-enhanced-evaluation.md  phase4-followup-engine.md  phase4-implementation-summary.md  phase5-session-orchestration.md  phase6-summary-generation.md  phase7-testing.md  plan.md
plans/251112-2117-domain-driven-state-management/: CHANGELOG.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  SUMMARY.md  phase-01-domain-model-enhancement.md  phase-02-database-migration.md  plan.md  (+3 more)
requirements/: base.txt  dev.txt  prod.txt
src/: __init__.py  main.py
tests/: conftest.py
(+157 files in other folders)
